[project]
name = "pybroker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.19.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pybroker*", "scripts*"]

[project.scripts]
pybroker = "pybroker.main:main"
db-bootstrap = "scripts.db.bootstrap:main"
db-seed = "scripts.db.seed:main"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
